# saywayland

./: .gitignore  README.adoc  cabal.project.freeze  flake.nix  package.nix  saywayland.cabal  treefmt.nix
lib/: Protocol.hs  Protocol.hs.bk  Saywayland.hs  SaywaylandTH.hs
lib/Saywayland/: Interfaces.hs  Protocol.hs  Types.hs  WaylandSocket.hs
lib/Saywayland/Protocols/: Wayland.hs  WlrLayerShell.hs  XdgShell.hs
protocols/: readme  wlr-layer-shell-unstable-v1.xml
test/both/protocol/: Main.hs
test/clients/basic-window/: Main.hs
test/clients/wallpaper-daemon/: Config.hs  Main.hs
test/servers/basic-compositor/: Main.hs
