cabal-version: 2.4
name:          saywayland
version:       0.0.0
license:       GPL-3.0-or-later
license-file:  LICENSE.txt
author:        saygo-png
maintainer:    saygo-png <saygo.mail@proton.me>
category:      Graphics
synopsis:      Generic, simple Wayland library without C bindings
homepage:      https://github.com/saygo-png/saywayland
bug-reports:   https://github.com/saygo-png/saywayland/issues
description:
  Saywayland is a WIP, simple Wayland library that doesn't use C bindings.
  Neither does it provide abstractions, it's a fairly raw and incomplete implementation of some Wayland protocols.

extra-source-files: protocols/*.xml

common common-options
  build-depends:
    , base    >=4.7 && <5
    , relude

  default-language:   GHC2024
  ghc-options:
    -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
    -Wno-safe -Wno-unsafe -Wno-unticked-promoted-constructors -rtsopts
    -threaded -with-rtsopts=-N

  default-extensions:
    DuplicateRecordFields
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures

library
  import:          common-options
  build-depends:
    , ansi-terminal
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , network
    , template-haskell
    , xml
    , unix
    , lens
  hs-source-dirs:  lib
  exposed-modules:
    Saywayland
    Saywayland.Types
    Saywayland.Interfaces
    Saywayland.WaylandSocket
    SaywaylandTH
    Protocol

-- Test of a simple wallpaper daemon
test-suite client-wallpaper-daemon
  import:           common-options
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/clients/wallpaper-daemon
  main-is:          Main.hs
  other-modules:    Config
  build-depends:
    , base
    , bytestring
    , network
    , relude
    , saywayland
    , unix
test-suite template-haskell-protocol
  import:           common-options
  default-language: GHC2024
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/both/protocol
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , network
    , relude
    , saywayland
    , unix
    , template-haskell
    , xml
