cabal-version:      2.4
name:               saywayland
version:            0.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE.txt
author:             saygo-png
maintainer:         saygo-png <saygo.mail@proton.me>
category:           Graphics
synopsis:           Generic, simple Wayland library without C bindings
homepage:           https://github.com/saygo-png/saywayland
bug-reports:        https://github.com/saygo-png/saywayland/issues
description:
  Saywayland is a WIP, simple Wayland library that doesn't use C bindings.
  Neither does it provide abstractions, it's a fairly raw and incomplete implementation of some Wayland protocols.

extra-source-files: protocols/*.xml

common common-options
  build-depends:      base >=4.7 && <5
  default-language:   GHC2024
  ghc-options:
    -Weverything -Wno-all-missed-specialisations
    -Wno-missed-specialisations -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
    -Wno-safe -Wno-unsafe -Wno-unticked-promoted-constructors -threaded

  default-extensions:
    DuplicateRecordFields
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures

common executable-options
  ghc-options: -rtsopts -with-rtsopts=-N

library
  import:          common-options
  build-depends:
    , ansi-terminal
    , async
    , bimap
    , binary
    , bytestring
    , containers
    , directory
    , filepath
    , lens
    , network
    , relude
    , shared-memory
    , stm
    , template-haskell
    , unix
    , xml

  hs-source-dirs:  lib
  exposed-modules:
    Protocol
    Saywayland
    Saywayland.Protocols.Wayland
    Saywayland.Protocols.WlrLayerShell
    Saywayland.Protocols.XdgShell
    Saywayland.Types
    Saywayland.WaylandSocket
    SaywaylandTH

-- Test of a simple wallpaper daemon
test-suite client-wallpaper-daemon
  import:         common-options, executable-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/clients/wallpaper-daemon
  main-is:        Main.hs
  other-modules:  Config
  build-depends:
    , base
    , bimap
    , containers
    , network
    , relude
    , saywayland
    , unix
    , stm

test-suite client-basic-window
  import:         common-options, executable-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/clients/basic-window
  main-is:        Main.hs
  build-depends:
    , base
    , bimap
    , containers
    , network
    , relude
    , saywayland
    , stm
    , unix

test-suite server-basic-compositor
  import:         common-options, executable-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/servers/basic-compositor
  main-is:        Main.hs
  build-depends:
    , async
    , base
    , bimap
    , containers
    , directory
    , network
    , relude
    , saywayland
    , unix

test-suite template-haskell-protocol
  import:         common-options, executable-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/both/protocol
  main-is:        Main.hs
  build-depends:
    , base
    , saywayland
    , template-haskell
